--- a/BakeryRecipe.Api/appsettings.json
+++ b/BakeryRecipe.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BakeryRecipeDb": "Data Source=.;Initial Catalog=BakeryRecipe;User ID=sa;pwd=123"
+  }
 }
