--- a/BakeryRecipe.Data/appsettings.json
+++ b/BakeryRecipe.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "BakeryRecipeDb": "Server=.;Database=BakeryRecipe;Trusted_Connection=True;"
+    "BakeryRecipeDb": "Data Source=.;Initial Catalog=BakeryRecipe;User ID=sa;pwd=123"
   }
 }
