add login and register

--- a/BakeryRecipe.Api/appsettings.json
+++ b/BakeryRecipe.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BakeryRecipeDb": "Data Source=.;Initial Catalog=BakeryRecipe;User ID=sa;pwd=1"
+  },
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://BakeryRecipe.com.vn"
+
   }
 }
