--- a/BakeryRecipe.Api/Properties/launchSettings.json
+++ b/BakeryRecipe.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7286;http://localhost:5286",
+      "applicationUrl": "https://localhost:7286",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
