Update authenticate features

--- a/BakeryRecipe.Api/appsettings.json
+++ b/BakeryRecipe.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BakeryRecipeDb": "Data Source=.;Initial Catalog=BakeryRecipe;User ID=sa;pwd=1"
+    "BakeryRecipeDb": "Data Source=.;Initial Catalog=BakeryRecipe;User ID=sa;pwd=1",
+    "OnlineRecipeDB": "Data Source=bakeryrecipe.database.windows.net;Initial Catalog=BakeryRecipe;User ID=bakeryrecipe;pwd=Admin@123"
   },
   "Tokens": {
     "Key": "0123456789ABCDEF",
