--- a/BakeryRecipe.Api/appsettings.json
+++ b/BakeryRecipe.Api/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BakeryRecipeDb": "Data Source=.;Initial Catalog=BakeryRecipe;User ID=sa;pwd=1",
+    "DucBakeryRecipeDb": "Data Source=MINHDUC;Initial Catalog=BakeryRecipe;User ID=Ducndm;pwd=Anhyeugaulam1*",
     "OnlineRecipeDB": "Data Source=bakeryrecipe.database.windows.net;Initial Catalog=BakeryRecipe;User ID=bakeryrecipe;pwd=Admin@123"
   },
   "Tokens": {
