Update crud product

--- a/BakeryRecipe.Application/BakeryRecipe.Application.csproj
+++ b/BakeryRecipe.Application/BakeryRecipe.Application.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\BakeryRecipe.ViewModels\BakeryRecipe.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="System\Report\" />
+  </ItemGroup>
+
 </Project>
