update status code

--- a/BakeryRecipe.Api/appsettings.json
+++ b/BakeryRecipe.Api/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "BakeryRecipeDb": "Data Source=.;Initial Catalog=BakeryRecipe;User ID=sa;pwd=1",
     "DucBakeryRecipeDb": "Data Source=MINHDUC;Initial Catalog=BakeryRecipe;User ID=Ducndm;pwd=Anhyeugaulam1*",
+    "ThinhBakeryRecipeDB": "Data Source=ASUSG14\\SQLEXPRESS;Initial Catalog=BakeryRecipe;User ID=swp391;pwd=123",
     "OnlineRecipeDB": "Data Source=bakeryrecipe.database.windows.net;Initial Catalog=BakeryRecipe;User ID=bakeryrecipe;pwd=Admin@123"
   },
   "Tokens": {
